src/objects/BT_CO_CMIS_POP_ImportPublicationIssue__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Details__c</fullName>
        <label>Validation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>consolidationDate__c</fullName>
        <label>consolidationDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orderCloseDate__c</fullName>
        <label>orderCloseDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orderClosedIndicator__c</fullName>
        <label>orderClosedIndicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pagination__c</fullName>
        <label>pagination</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publicationCode__c</fullName>
        <label>publicationCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publicationIssueDate__c</fullName>
        <label>publicationIssueDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publicationIssueNumber__c</fullName>
        <label>publicationIssueNumber</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_CMIS_POP_ImportPublicationIssue</label>
    <nameField>
        <label>BT_CO_CMIS_POP_ImportPublicationPrice__c</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_CMIS_POP_ImportPublicationIssues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>